examples/beams/sample/beam.jade
//-//includes
mixin layout()
	doctype html
	html
		head
			title= title
			link(rel='stylesheet', href='/stylesheets/style.css')
		body
			+notifier(msgs)
			block
			+trace(trace)

mixin trace(trace)
	if trace
		.pillar-trace
			hr
			pre=trace

mixin notifier(msgs)
	if msgs
		ul.pillar-notifier
		each msg, key in msgs
			li=msg

mixin fieldset(fieldset,name,data)
	.pillar-fieldset
	each field,fkey in fieldset.fields
		- fname = name+"["+fkey+"]";
		- fid = fieldidr(fname);
		- fdata = data[fkey] || "";
		+field(field,fname,fid,fdata)

mixin array(field,name,id,data)
	fieldset.pillar-array
		legend=field.label
		p.pillar-field-details=field.details
		each adata,dkey in data
			each sfield,fkey in field.fields
				- var fname = name+"["+dkey+"]["+fkey+"]";
				- var fid = fieldidr(fname);
				- var fdata = adata[fkey] || "";
				+field(sfield,fname,fid,fdata)

mixin subset(field,name,id,data)
	fieldset.pillar-subset
		legend=field.label
		p.pillar-field-details=field.details
		each sfield,fkey in field.fields
			- var fname = name+"["+fkey+"]";
			- var fid = fieldidr(fname);
			- var fdata = data[fkey] || "";
			+field(sfield,fname,fid,fdata)

mixin field(field,name,id,data)
	.pillar-field
		label(for=fieldid)=field.label
		if field.i18n
			+field-i18n(field,name,id,data)
		else
			+#{field.template}(field,name,id,data)
		p.pillar-field-details=field.details

mixin field-i18n(field,name,id,data)
	.pillar-langfields
	each lang in langlist
		- var fname = name+'['+lang+']';
		- var fid = fieldidr(fname);
		- var fdata = data[lang] || "";
		- var classes = "";
		- if(defaultlang==lang){var classes = ['defaultlang'];}
		+#{field.template}(field,fname,fid,fdata,classes)

mixin text(field,name,id,data,classes)
	input(type='text', class=classes, class=['pillar-input','pillar-input-text'], id=id, name=name, value=data)

mixin textarea(field,name,id,data,classes)
	textarea(class=classes, class=['pillar-input','pillar-input-textarea'], id=id, name=name)=data

//-//error
.pillar-error
	+layout
		h1 Upppps!
		a(href=path.list()) [Go to list]

//-//list
+layout
	.pillar-list
		h1 Listing elements
		if data.length==0
			p: strong No results
		hr
		each doc, key in data
			pre=util.format(doc)
			a(href=path.update(doc._id)) [Edit this element]
			a(href=path.one(doc._id)) [View this element]
			hr
		a(href=path.insert()) [Insert new element]

//-//one
+layout
	.pillar-one
		h1 Viewing element #{data._id}
		pre=util.format(data)
		a(href=path.update(data._id)) [Edit this element]
		a(href=path.list()) [Go to list]
		a(href=path.insert()) [Insert new element]

//-//update
+layout
	.pillar-update
		h1 Edit element #{data._id}
		form(method='POST', action=path.update(data._id), id=fieldidr(panel.uname), name=panel.uname)
			fieldset
				legend=panel.fields.title
				p.details=panel.fields.details
				input(type='hidden', name='_method', value='put')
				+fieldset(panel.fields,panel.uname,data)
				.buttons
					input(type='submit', value='Save')
					input(type='submit', value='Delete', onclick="this.form._method.value=\'delete\';", formaction=path.remove(data._id))
					a(href=path.list()) [Go to list]
					a(href=path.insert()) [Insert new element]

//-//insert
+layout
	.pillar-insert
		h1 Inserting new element
		form(method='POST', action=path.insert(), id=fieldidr(panel.uname), name=panel.uname)
			fieldset
				legend=panel.fields.title
				p.details=panel.fields.details
				input(type='hidden', name='_method', value='post')
				+fieldset(panel.fields,panel.uname,data)
				.buttons
					input(type='submit', value='Save')
					a(href=path.list()) [Go to list]


